kubernetes/argo/not-deployed/argo-workflows.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workflows
---
apiVersion: v1
kind: Namespace
metadata:
  name: workflows
# ---
# apiVersion: external-secrets.io/v1beta1
# kind: ExternalSecret
# metadata:
#   name: sso
#   namespace: argo-workflows
#   labels:
#     app.kubernetes.io/part-of: argocd
# spec:
#   refreshInterval: "5m"
#   secretStoreRef:
#     kind: ClusterSecretStore
#     name: 1password
#   target:
#     creationPolicy: Owner
#   data:
#     - secretKey: token
#       remoteRef:
#         key: sso
#         property: workflows
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: workflows
  namespace: argo-workflows
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "workflow.nahops.co.uk"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 2746
